typescript/checker/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            298,
        ),
        hi: BytePos(
            299,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity.ts:15:5
   |
15 | var c: C;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            309,
        ),
        hi: BytePos(
            310,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity.ts:16:5
   |
16 | var d: D;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            320,
        ),
        hi: BytePos(
            321,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity.ts:17:5
   |
17 | var e: E;
   |     ^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity.ts
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity.ts:18:1
   |
18 | c = e;
   | ^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            344,
        ),
        hi: BytePos(
            348,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity.ts:19:10
   |
19 | var r = c.foo(1);
   |          ^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            364,
        ),
        hi: BytePos(
            368,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassTransitivity.ts:20:11
   |
20 | var r2 = e.foo('');
   |           ^^^^

